# xmemo-hermes-plugin

./: .gitignore  PLAN.md  README.md  __init__.py  cli.py  client.py  plugin.yaml  pyproject.toml
tests/: test_provider.py
xmemo/: __init__.py  cli.py  client.py  config.py
