[project]
name = "xmemo-hermes-plugin"
version = "1.0.0"
description = "XMemo memory provider plugin for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [{ name = "XMemo" }]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
